--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -191,6 +191,7 @@
                 android:background="@drawable/circle_btn_black"
                 android:fontFamily="@font/eightbit"
                 android:text="SET"
+                android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
