--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -66,7 +66,7 @@
         android:fontFamily="@font/eightbit"
         android:gravity="center"
         android:hint="password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:textColor="#000000"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
