--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -25,12 +25,20 @@
         android:id="@+id/imgWifi"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="150dp"
         android:src="@drawable/wifi"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgReset"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_marginEnd="60dp"
+        android:src="@drawable/reset_red"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imgWifi" />
 
     <EditText
         android:id="@+id/edtColor"
