--- a/app/src/main/res/layout/input_todo_layout.xml
+++ b/app/src/main/res/layout/input_todo_layout.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:fontFamily="@font/eightbit"
-        android:hint="Name"
+        android:hint="Time"
         android:inputType="text"
         android:text=""
         android:textSize="12sp"
@@ -29,9 +29,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/eightbit"
-        android:hint="Last"
+        android:hint="Title"
         android:inputType="text"
         android:text=""
         android:textSize="12sp"
