--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,13 +99,13 @@
         app:layout_constraintTop_toBottomOf="@+id/imageViewRectangle" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnBack"
+        android:id="@+id/btnOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#000000"
         android:backgroundTint="#000000"
         android:fontFamily="@font/eightbit"
-        android:text="back"
+        android:text="Option"
         android:textColor="#FFFFFF"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnTitleHome"
