add dynamic profile picture and update chat layout

--- a/app/src/main/res/layout/fragment_option.xml
+++ b/app/src/main/res/layout/fragment_option.xml
@@ -34,6 +34,7 @@
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
         android:text="Home"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnLocation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +53,7 @@
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
         android:text="Chat"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnLocation"
         app:layout_constraintEnd_toStartOf="@+id/btnHome"
@@ -63,7 +65,7 @@
         android:layout_width="300dp"
         android:layout_height="140dp"
         android:layout_marginBottom="100dp"
-        android:background="#FF0000"
+        android:background="#FFFFFF"
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
         android:text="Location"
@@ -78,7 +80,7 @@
         android:layout_width="300dp"
         android:layout_height="140dp"
         android:layout_marginTop="-300dp"
-        android:background="#FF0000"
+        android:background="#FFFFFF"
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
         android:text="Memory"
