--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -21,12 +21,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgWifi"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="80dp"
         android:src="@drawable/wifi"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,13 +41,75 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imgWifi" />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/red"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="40dp"
+        android:src="#FF0000"
+        app:layout_constraintEnd_toStartOf="@+id/yellow"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/yellow" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/green"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="40dp"
+        android:src="#00FF00"
+        app:layout_constraintBottom_toBottomOf="@+id/blue"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/blue"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="48dp"
+        android:src="#0000FF"
+        app:layout_constraintBottom_toTopOf="@+id/yellow"
+        app:layout_constraintEnd_toStartOf="@+id/green" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/yellow"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="56dp"
+        android:src="#FFF000"
+        app:layout_constraintBottom_toTopOf="@+id/edtColor"
+        app:layout_constraintEnd_toStartOf="@+id/violet" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/pink"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="30dp"
+        android:src="#FFC0CB"
+        app:layout_constraintEnd_toStartOf="@+id/blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/blue" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/violet"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="40dp"
+        android:src="#7F00FF"
+        app:layout_constraintBottom_toBottomOf="@+id/yellow"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <EditText
         android:id="@+id/edtColor"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:layout_marginStart="60dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="36dp"
         android:background="@drawable/edt_style"
         android:ems="10"
         android:fontFamily="@font/eightbit"
@@ -57,14 +120,15 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnSetColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/red"
+        app:layout_constraintVertical_bias="0.826" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSetColor"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginBottom="150dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/circle_btn"
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
@@ -72,6 +136,6 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
