--- a/app/src/main/res/layout/fragment_post_feed.xml
+++ b/app/src/main/res/layout/fragment_post_feed.xml
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="User"
+            android:text="Samnang"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/memory_profile"
