fix minor bugs in feed

--- a/app/src/main/res/layout/fragment_option.xml
+++ b/app/src/main/res/layout/fragment_option.xml
@@ -36,7 +36,7 @@
         android:text="Home"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnLocation"
+        app:layout_constraintBottom_toTopOf="@+id/btnAnniversary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnChat"
         app:layout_constraintTop_toBottomOf="@+id/btnMemory" />
@@ -55,20 +55,20 @@
         android:text="Chat"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnLocation"
+        app:layout_constraintBottom_toTopOf="@+id/btnAnniversary"
         app:layout_constraintEnd_toStartOf="@+id/btnHome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnMemory" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnLocation"
+        android:id="@+id/btnAnniversary"
         android:layout_width="300dp"
         android:layout_height="140dp"
         android:layout_marginBottom="100dp"
         android:background="#FFFFFF"
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
-        android:text="Location"
+        android:text="In Love"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@
         android:fontFamily="@font/eightbit"
         android:text="Memory"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnLocation"
+        app:layout_constraintBottom_toTopOf="@+id/btnAnniversary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
