--- a/app/src/main/res/layout/fragment_option.xml
+++ b/app/src/main/res/layout/fragment_option.xml
@@ -66,6 +66,7 @@
         android:layout_height="140dp"
         android:layout_marginBottom="100dp"
         android:background="#FFFFFF"
+        android:textColor="#000000"
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
         android:text="In Love"
@@ -81,6 +82,7 @@
         android:layout_height="140dp"
         android:layout_marginTop="-300dp"
         android:background="#FFFFFF"
+        android:textColor="#000000"
         android:backgroundTint="@null"
         android:fontFamily="@font/eightbit"
         android:text="Memory"
