--- a/app/src/main/res/layout/fragment_post_feed.xml
+++ b/app/src/main/res/layout/fragment_post_feed.xml
@@ -64,6 +64,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:fontFamily="@font/pixelpol"
+
         android:hint="Type a message..."
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
