--- a/app/src/main/res/layout/memory_layout.xml
+++ b/app/src/main/res/layout/memory_layout.xml
@@ -28,6 +28,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="User"
+            android:fontFamily="@font/pixelpol"
+
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@+id/memory_profile"
@@ -40,7 +42,10 @@
         android:id="@+id/memory_caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/pixelpol"
+        android:padding="10dp"
         android:text="Message text"
+        android:textSize="20sp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFFFFF" />
 
@@ -54,6 +59,9 @@
         android:id="@+id/memory_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/pixelpol"
+        android:padding="10dp"
+        android:textSize="12sp"
         android:text="Timestamp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#FFFFFF" />
