--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -37,6 +37,7 @@
         android:id="@+id/list_of_messages"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         android:background="#000000"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll"
